# cornelius_demon

./: .gitattributes  LICENSE  README.md
devel/: .catkin  .rosinstall
devel/include/industrial_msgs/: CmdJointTrajectoryRequest.h  CmdJointTrajectoryResponse.h  DebugLevel.h  DeviceInfo.h  GetRobotInfoRequest.h  GetRobotInfoResponse.h  RobotMode.h  RobotStatus.h  ServiceReturnCode.h  SetDrivePowerRequest.h  SetDrivePowerResponse.h  SetRemoteLoggerLevelRequest.h  SetRemoteLoggerLevelResponse.h  StartMotionRequest.h  StartMotionResponse.h  StopMotionRequest.h  StopMotionResponse.h  TriState.h
devel/include/moveit/: version.h
devel/lib/: libchomp_motion_planner.so.1.1.13  libchomp_planner_plugin.so.1.1.13  libcollision_detector_bullet_plugin.so.1.1.13  libcollision_detector_fcl_plugin.so.1.1.13  libmoveit_background_processing.so.1.1.13  libmoveit_cached_ik_kinematics_base.so.1.1.13  libmoveit_cached_ik_kinematics_plugin.so.1.1.13  libmoveit_cached_ur10_kinematics_plugin.so.1.1.13  libmoveit_cached_ur3_kinematics_plugin.so.1.1.13  libmoveit_cached_ur5_kinematics_plugin.so.1.1.13  libmoveit_chomp_optimizer_adapter.so.1.1.13  libmoveit_collision_detection.so.1.1.13  libmoveit_collision_detection_bullet.so.1.1.13  libmoveit_collision_detection_fcl.so.1.1.13  libmoveit_collision_distance_field.so.1.1.13  libmoveit_collision_plugin_loader.so.1.1.13  libmoveit_common_planning_interface_objects.so.1.1.13  libmoveit_constraint_sampler_manager_loader.so.1.1.13  libmoveit_constraint_samplers.so.1.1.13  libmoveit_cpp.so.1.1.13  libmoveit_default_planning_request_adapter_plugins.so.1.1.13  libmoveit_depth_image_octomap_updater.so.1.1.13  libmoveit_depth_image_octomap_updater_core.so.1.1.13  libmoveit_depth_self_filter.so.1.1.13  libmoveit_distance_field.so.1.1.13  libmoveit_dynamics_solver.so.1.1.13  libmoveit_exceptions.so.1.1.13  libmoveit_fake_controller_manager.so.1.1.13  libmoveit_kdl_kinematics_plugin.so.1.1.13  libmoveit_kinematic_constraints.so.1.1.13  libmoveit_kinematics_base.so.1.1.13  libmoveit_kinematics_metrics.so.1.1.13  libmoveit_kinematics_plugin_loader.so.1.1.13  libmoveit_lazy_free_space_updater.so.1.1.13  libmoveit_lerp_planner_plugin.so.0.1.0  libmoveit_lma_kinematics_plugin.so.1.1.13  libmoveit_mesh_filter.so.1.1.13  libmoveit_motion_planning_rviz_plugin.so.1.1.13  libmoveit_motion_planning_rviz_plugin_core.so.1.1.13  libmoveit_move_group_capabilities_base.so.1.1.13  (+52 more)
devel/lib/industrial_robot_client/: joint_trajectory_action  motion_download_interface  motion_download_interface_bswap  motion_streaming_interface  motion_streaming_interface_bswap  robot_state  robot_state_bswap
devel/lib/moveit_commander/: moveit_commander_cmdline.py
devel/lib/moveit_core/: moveit_version  robot_state_benchmark
devel/lib/moveit_kinematics/: benchmark_ik  test_kinematics_plugin
devel/lib/moveit_planners_ompl/: generate_state_database
devel/lib/moveit_ros_benchmarks/: moveit_combine_predefined_poses_benchmark  moveit_run_benchmark
devel/lib/moveit_ros_move_group/: list_move_group_capabilities  move_group
devel/lib/moveit_ros_occupancy_map_monitor/: moveit_ros_occupancy_map_server
devel/lib/moveit_ros_planning/: demo_scene  moveit_compare_collision_checking_speed_fcl_bullet  moveit_display_random_state  moveit_evaluate_collision_checking_speed  moveit_evaluate_state_operations_speed  moveit_kinematics_speed_and_validity_evaluator  moveit_list_request_adapter_plugins  moveit_print_planning_model_info  moveit_print_planning_scene_info  moveit_publish_scene_from_text  moveit_visualize_robot_collision_volume
devel/lib/moveit_ros_planning_interface/: demo  test_cleanup
devel/lib/moveit_ros_warehouse/: moveit_init_demo_warehouse  moveit_save_to_warehouse  moveit_warehouse_broadcast  moveit_warehouse_import_from_text  moveit_warehouse_save_as_text  moveit_warehouse_services
devel/lib/moveit_servo/: cpp_interface_example  pose_tracking_example  servo_server  spacenav_to_twist
devel/lib/moveit_setup_assistant/: collisions_updater  moveit_setup_assistant
devel/lib/moveit_tutorials/: bag_publisher_maintain_time  bullet_collision_checker_tutorial  collision_scene_example.py  detect_and_add_cylinder_collision_object_demo  lerp_example  motion_planning_api_tutorial  motion_planning_pipeline_tutorial  move_group_interface_tutorial  moveit_cpp_tutorial  pick_place_tutorial  planning_scene_ros_api_tutorial  planning_scene_tutorial  robot_model_and_robot_state_tutorial  ros_api_tutorial  state_display_tutorial  subframes_tutorial  trajopt_example  visualizing_collisions_tutorial
devel/lib/moveit_visual_tools/: moveit_visual_tools_demo
devel/lib/pilz_robot_programming/: acceptance_test_api_cmd.py  acceptance_test_blending.py  acceptance_test_brake_test.py  acceptance_test_circ.py  acceptance_test_gripper_cmd.py  acceptance_test_manual_move_ctrl.py  demo_brake_test_program.py  demo_program.py
devel/lib/pkgconfig/: chomp_motion_planner.pc  industrial_deprecated.pc  industrial_msgs.pc  industrial_robot_client.pc  industrial_robot_simulator.pc  industrial_trajectory_filters.pc  industrial_utils.pc  moveit_chomp_optimizer_adapter.pc  moveit_commander.pc  moveit_core.pc  moveit_fake_controller_manager.pc  moveit_kinematics.pc  moveit_msgs.pc  moveit_planners_chomp.pc  (+47 more)
src/selfie_drawing_robot/: CMakeLists.txt  package.xml
src/selfie_drawing_robot/launch/: test_script.launch  user_interface.launch
src/selfie_drawing_robot/src/: Robot.cpp  Robot.h  convert_svg_to_vector.cpp  current_program.cpp  demo_program.py  line_detection copy.cpp  line_detection.cpp  line_detection.h  main.sh  misc  misc2  motion_planning_tutorial.cpp  operations.cpp  operations.h  publisher_example.py  ros_node.py  rubbishhh  run_all_scripts.sh  run_line_script.sh  run_ros_command.sh  stroke_planning.py  talk_to_raspi.py  test_line_detection.cpp  test_script.cpp  userInterface.py
src/selfie_drawing_robot/src/SVG_test/: svg.py
src/selfie_drawing_robot/src/unused_backups/: line_detection copy.h
src/selfie_drawing_robot/testing/: test.cpp
src/test_ur3e_moveit_config/: .setup_assistant  CMakeLists.txt
(+119 files in other folders)
